--- a/breakfast.html
+++ b/breakfast.html
@@ -27,6 +27,7 @@
             <button class="bt1">poori</button>
         </div>
     </div>
+    <center>
     <table class="table">
         <th>I T E M S</th>
         <th>R s.</th>
@@ -43,6 +44,7 @@
             <td>15</td>
         </tr>
     </table>
+    </center>
     <center>
         <button class="b" onclick="location.href='menu.html'">GO TO MENU</button>
         <button class="b" onclick="location.href='lunch.html'">NEXT</button>
