--- a/dinner.html
+++ b/dinner.html
@@ -25,6 +25,7 @@
             <button class="bt1">FriedRice</button>
         </div>
     </div>
+     <center>
     <table class="table">
         <th>Items</th>
         <th>Rs.</th>
@@ -45,6 +46,7 @@
             <td>10</td>
         </tr>
     </table>
+</center>
     <center>
         <button class="b" onclick="location.href='lunch.html'">PREVIOUS</button>
         
