--- a/lunch.html
+++ b/lunch.html
@@ -26,6 +26,7 @@
             <button class="bt1">vegrice</button>
         </div>
     </div>
+     <center>
     <table class="table">
         <th>I T E M S</th>
         <th>R s.</th>
@@ -46,6 +47,7 @@
             <td>10</td>
         </tr>
     </table>
+</center>
     <center>
         <button class="b" onclick="location.href='breakfast.html'">PREVIOUS</button>
         <button class="b" onclick="location.href='menu.html'">GO TO MENU</button>
