--- a/snacks.html
+++ b/snacks.html
@@ -22,6 +22,7 @@
         </div>
         
     </div>
+     <center>
     <table class="table">
         <th>Items</th>
         <th>Rs.</th>
@@ -35,6 +36,7 @@
         </tr>
         ?
     </table>
+</center>
     <center>
         <button class="b" onclick="location.href='dinner.html'">PREVIOUS</button>
         <button class="b" onclick="location.href='menu.html'">GO TO MENU</button>
